--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!-- <script src="https://native/interactor_proxy.js" type="text/javascript"></script> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>活动</title>
+    <script src="./jsbridge.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener("onInteractorReady", function(event){
+        // console.log(event.InteractorProxy.version)
+        // window.InteractorProxy.app = event
+        // alert(JSON.stringify(event.app))
+        alert(JSON.stringify(window.InteractorProxy.getUserInfo()))
+
+        // window.InteractorProxy = event.InteractorProxy
+        // window.InteractorProxy.registerHandler()
+      })
+    </script>
+    
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
